# bridelopp

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
.aws/: ecs-task-definition.json
.github/workflow/: aws-deploy.yml
.github/workflows/: jostrid-se-AutoDeployTrigger-4732e81c-50c1-4a96-ad56-7b633f9b8e9d.yml
public/: style.css
src/: main.rs
src/config/: mod.rs
src/controllers/: admin_controller.rs  admin_invite_controller.rs  azure_oauth_controller.rs  email_controller.rs  image_controller.rs  mod.rs  music_controller.rs  public_controller.rs  registration_controller.rs  response_controller.rs  spotify_oauth_controller.rs  template_controller.rs
src/db/: jostrid_database.rs  mod.rs
src/db/jostrid_database/: images.rs  invites.rs  responses.rs  spotify.rs
src/error/: mod.rs
src/lib/: authentication.rs  azure_oauth.rs  controller.rs  mod.rs
src/pkce/: mod.rs  pkce.rs
templates/: admin.html.hbs  admin_login.html.hbs  contact.html.hbs  image.html.hbs  index.html.hbs  information.html.hbs  login.html.hbs  main.html.hbs  music.html.hbs  registration.html.hbs
templates/index/: login.html.hbs
templates/partials/: app_logo.html.hbs  head.html.hbs  login_form.html.hbs  menu.html.hbs  small_logo.html.hbs
