[package]
name = "bridelopp"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
urlencoding = "2.1.2"
dotenv = "0.15.0"
base64 = "0.13.0"
rand = "0.8.5"
sha2 = "0.10.6"
async-trait = "0.1.71"
uuid = { version = "1.4.1", features = ["v4"] }
md5 = "0.7.0"
time = { version = "0.3.23", features = ["formatting"] }
image = "0.24.6"

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json", "msgpack", "uuid"]

[dependencies.rocket_dyn_templates]
version =  "0.1.0-rc.2"
features = ["tera", "handlebars"]

[dependencies.rocket_db_pools]
version = "0.1.0-rc.2"
features = ["mongodb"]
